fix header shadow and service offers size on mobile

--- a/app/index.css
+++ b/app/index.css
@@ -84,6 +84,11 @@ p {
 	margin-block: 0;
 }
 
+*:focus {
+	outline: none;
+	filter: brightness(30%);
+}
+
 button {
 	border: unset;
 	background: unset;
@@ -104,12 +109,6 @@ img {
 	-moz-user-drag: none;
 	-o-user-drag: none;
 	user-drag: none;
-}
-
-.bg-button-header {
-	background: linear-gradient(145deg, #0f61a0, #093a60);
-	box-shadow: 5px 5px 10px rgb(0 0 0 / 40%),
-		-5px -5px 10px rgb(255 255 255 / 70%);
 }
 
 .shadow-sm-turquoise {
@@ -173,9 +172,4 @@ img {
 	max-height: -webkit-fill-available;
 	height: 100vh;
 	height: -webkit-fill-available;
-}
-
-*:focus {
-	outline: none;
-	filter: brightness(65%);
 }
